--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,16 +83,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Combine manifest with sample sheet, filter for relevant files\n",
-    "\n",
-    "- Merge manifest and sample sheet\n",
-    "- If previous selection of case IDs -> filter for specific case IDs of previous analysis\n",
-    "- Create adapted filtered manifest files for gdc-client download, rename them with the suffix \"_ready.txt\""
+    "## Combine manifest with sample sheet, filter for relevant files to download"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +96,7 @@
     "import yaml\n",
     "import shlex\n",
     "import subprocess\n",
+    "import os\n",
     "\n",
     "# load config file\n",
     "with open('data/config.yaml', 'r') as streamfile:\n",
@@ -123,29 +120,81 @@
     "sample_sheets_merge['Case ID'] = sample_sheets_merge['Case ID'].str.split(', ', expand=True)[0]\n",
     "\n",
     "# merge each manifest file with the sample sheet\n",
-    "merge_manifest_sample_sheet = [pd.merge(manifest, sample_sheets_merge, how='left', left_on=['id','filename'], right_on=['File ID','File Name']) for manifest in manifests_dfs]\n",
+    "merge_manifest_sample_sheet = []\n",
+    "for manifest in manifests_dfs:\n",
+    "    df = pd.merge(manifest, sample_sheets_merge, how='left', left_on=['id','filename'], right_on=['File ID','File Name'], indicator=True)\n",
+    "\n",
+    "    \n",
+    "    if len(df[df['_merge']=='left_only'])>0:\n",
+    "        print('It seems like a manifest entry cannot be mapped to the sample sheet. Please check your manifest file and sample sheet again.')\n",
+    "        print('Only mapped samples are further processed.')\n",
+    "        df = df[df['_merge']=='both'].copy()\n",
+    "    merge_manifest_sample_sheet.append(df.drop(columns='_merge'))\n",
+    "\n",
+    "\n",
+    "# Check whether files in manifest have already been downloaded an exclude them from the manifest\n",
+    "def Check_Already_Downloaded(manifest_sample_sheet_df, method_dict):\n",
+    "    df = manifest_sample_sheet_df.copy().drop_duplicates()\n",
+    "    \n",
+    "    df['Folder'] = ''\n",
+    "    for met in method_dict.keys():\n",
+    "        df.loc[df['File Name'].str.contains(met), 'Folder'] = method_dict[met]\n",
+    "    \n",
+    "    # 36 characters file ID\n",
+    "    df['File Suffix'] = df['File Name'].str[36:]\n",
+    "    df['Path_raw'] = analysis_path+'00_raw_data/'+df['File ID']+'/'+df['File Name']\n",
+    "    df['Path_sample'] = analysis_path+'01_sample_data/'+df['Folder']+'/'+df['Case ID']+df['File Suffix']\n",
+    "\n",
+    "    # check if file was already downloaded\n",
+    "    df['is_file_raw'] = df['Path_raw'].apply(os.path.isfile)\n",
+    "    df['is_file_caseid'] = df['Path_sample'].apply(os.path.isfile)\n",
+    "    \n",
+    "    return df\n",
+    "\n",
     "\n",
     "# if filtering of manifest file on case IDs of previous sample sheet is wanted\n",
+    "# include step of checking whether files are already downloaded\n",
     "sample_sheet_filtering = config_file['sample_sheet_filtering']\n",
+    "method_dict = config_file['methods_dict']\n",
     "\n",
     "if sample_sheet_filtering != False:\n",
     "    sample_sheet_filter = pd.read_table(analysis_path+'sample_sheets/'+sample_sheet_filtering)\n",
     "    case_ids = list(sample_sheet_filter['Case ID'].unique())\n",
     "    list_manifests_for_download = []\n",
     "    for manifest, file_name_manifest in zip(merge_manifest_sample_sheet, manifests):\n",
-    "        filtered_manifest = pd.merge()\n",
+    "        # only include primary tumor samples\n",
     "        filtered_manifest = manifest[(manifest['Case ID'].isin(case_ids))&(manifest['Sample Type']=='Primary Tumor')].copy()\n",
-    "        filtered_manifest_name = analysis_path+'sample_sheets/manifests_for_download/'+file_name_manifest+'_ready'+'.txt'\n",
+    "        \n",
+    "        # check for already downloaded files\n",
+    "        filtered_manifest = Check_Already_Downloaded(filtered_manifest, method_dict)\n",
+    "\n",
+    "        # save filtered and merged manifest with old and new file names\n",
+    "        filtered_manifest.to_csv(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+file_name_manifest.rsplit('.', 1)[0]+'_merged_sample_sheet.txt', \n",
+    "                                 sep='\\t', index=False)\n",
+    "\n",
+    "        # only include not already downloaded entries\n",
+    "        filtered_checked_manifest = filtered_manifest[(filtered_manifest['is_file_raw']==False)&(filtered_manifest['is_file_caseid']==False)]\n",
+    "        filtered_manifest_name = analysis_path+'sample_sheets/manifests_for_download/'+file_name_manifest.rsplit('.', 1)[0]+'_ready.txt'\n",
     "        list_manifests_for_download.append(filtered_manifest_name)\n",
-    "        filtered_manifest[['id','filename','md5','size','state']].to_csv(filtered_manifest_name, sep='\\t', index=False)\n",
-    "        filtered_manifest.to_csv(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+file_name_manifest+'_merged_sample_sheet'+'.txt', sep='\\t', index=False)\n",
+    "        # save filtered manifest for download\n",
+    "        filtered_checked_manifest[['id','filename','md5','size','state']].to_csv(filtered_manifest_name, sep='\\t', index=False)\n",
+    "            \n",
     "else:\n",
     "    list_manifests_for_download = []\n",
     "    for manifest, file_name_manifest in zip(merge_manifest_sample_sheet, manifests):\n",
-    "        manifest_name = analysis_path+'sample_sheets/manifests_for_download/'+file_name_manifest+'_ready'+'.txt'\n",
+    "        # check for already downloaded files\n",
+    "        manifest = Check_Already_Downloaded(manifest, method_dict)\n",
+    "\n",
+    "        # save merged manifest with old and new file names\n",
+    "        manifest.to_csv(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+file_name_manifest.rsplit('.', 1)[0]+'_merged_sample_sheet.txt', sep='\\t', index=False)\n",
+    "\n",
+    "        # only include not already downloaded entries\n",
+    "        checked_manifest = manifest[(manifest['is_file_raw']==False)&(manifest['is_file_caseid']==False)]\n",
+    "        manifest_name = analysis_path+'sample_sheets/manifests_for_download/'+file_name_manifest.rsplit('.', 1)[0]+'_ready.txt'\n",
     "        list_manifests_for_download.append(manifest_name)\n",
-    "        manifest[['id','filename','md5','size','state']].to_csv(manifest_name, sep='\\t', index=False)\n",
-    "        manifest.to_csv(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+file_name_manifest+'_merged_sample_sheet'+'.txt', sep='\\t', index=False)\n",
+    "        # save manifest for download\n",
+    "        checked_manifest[['id','filename','md5','size','state']].to_csv(manifest_name, sep='\\t', index=False)\n",
+    "        \n",
     "\n",
     "# manifests for download\n",
     "# read in configuration file again because it was changed the prior step\n",
@@ -165,30 +214,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download TCGA data via a manifest document and the GDC-client tool\n",
-    "- This part creates a new conda environment called \"gdc_client\" and downloads the gdc-client tool\n",
-    "- Download of the TCGA data from manifest specified in previous steps and/or the configuration file via the gdc-client\n",
-    "- The files from the manifest are downloaded into the following folder: analysis_path + '00_raw_data'\n",
-    "\n",
-    "- Optional: for restricted access files:\n",
-    "    - Login at NIH for restricted access files\n",
-    "    - Download access token, save as secured file"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- \n",
-    "\n",
-    "```\n",
-    "gdc-client download -m manifest.txt -t user-token.txt\n",
-    "```\n"
+    "### Download TCGA data via a manifest document and the GDC-client tool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,34 +238,11 @@
     "\n",
     "    if manifest_download_list == False:\n",
     "        manifest_for_download = False\n",
+    "        # merge_manifest_sample_sheet = False\n",
     "        print('Please execute the previous part of the pipeline or input your files manually in the data/config.yaml file')\n",
     "    else:\n",
-    "        manifest_for_download = [analysis_path+'sample_sheets/manifests/'+i for i in manifest_download_list]\n",
-    "    \n",
-    "    return manifest_for_download\n",
-    "\n",
-    "\n",
-    "# Check whether files in manifest have already been downloaded an exclude them from the manifest\n",
-    "def Check_Already_Downloaded():\n",
-    "    with open('data/config.yaml', 'r') as streamfile:\n",
-    "        config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
-    "    \n",
-    "    analysis_path = config_file['analysis_path']\n",
-    "    \n",
-    "    manifest_for_download_prior = Create_Manifest_Download_List()\n",
-    "\n",
-    "    manifest_for_download = []\n",
-    "\n",
-    "    # better: check if case ID file in 01_sample\n",
-    "    if manifest_for_download_prior != False:\n",
-    "        for manifest_file in manifest_for_download_prior:\n",
-    "            manifest = pd.read_table(manifest_file).drop_duplicates()\n",
-    "            manifest['file_path'] = analysis_path + '00_raw_data/' + manifest['id'] + '/' + manifest['filename']\n",
-    "            manifest['is_file'] = manifest['file_path'].apply(os.path.isfile)\n",
-    "            manifest2 = manifest[manifest['is_file']==False].copy()\n",
-    "            manifest_file_name_2 = manifest_file.rsplit('.', 1)[0] + '_check' + manifest_file.rsplit('.', 1)[1]\n",
-    "            manifest2.to_csv(manifest_file_name_2)\n",
-    "            manifest_for_download.append(manifest_file_name_2)\n",
+    "        manifest_for_download = [analysis_path+'sample_sheets/manifests_for_download/'+i for i in manifest_download_list]\n",
+    "        # merge_manifest_sample_sheet = []\n",
     "    \n",
     "    return manifest_for_download\n",
     "\n",
@@ -249,7 +257,7 @@
     "\n",
     "    if conda_gdc == False:\n",
     "        print('Please execute the TCGA data download in your own environment or '+\n",
-    "            'set \"conda_gdc\" in the data/config.yaml file to \"True\" to create a conda environment with the gdc-client')\n",
+    "            'set \"conda_gdc\" in the data/config.yaml file to \"First_install\" to create a conda environment with the gdc-client')\n",
     "    elif conda_gdc == True:\n",
     "        name_conda_gdc_env = 'gdc_client'\n",
     "    elif conda_gdc == 'First_install':\n",
@@ -277,7 +285,7 @@
     "\n",
     "    os.makedirs(raw_data_path, exist_ok=True)\n",
     "\n",
-    "    manifest_for_download = Check_Already_Downloaded()\n",
+    "    manifest_for_download = Create_Manifest_Download_List()\n",
     "\n",
     "    name_conda_gdc_env = Download_gdc_client()\n",
     "\n",
@@ -292,7 +300,7 @@
     "                command_download_tcga_data = f'conda run -n {name_conda_gdc_env} gdc-client download -m {manifest_file}'\n",
     "            else:\n",
     "                print(f'Download TCGA data with TCGA manifest {manifest_file.split(\"/\")[-1]} with TCGA user token file {tcga_user_token_file.split(\"/\")[-1]}')\n",
-    "                command_download_tcga_data = f'conda run -n {name_conda_gdc_env} gdc-client download -m {manifest_file} {tcga_user_token_file}'\n",
+    "                command_download_tcga_data = f'conda run -n {name_conda_gdc_env} gdc-client download -m {manifest_file} -t {tcga_user_token_file}'\n",
     "            process = subprocess.Popen(command_download_tcga_data, cwd=raw_data_path, shell=True)\n",
     "            process.wait()\n",
     "\n",
@@ -303,21 +311,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Rename file names with symlinks\n",
-    "- In manifest only id, filename with 36 different characters\n",
-    "- Merge manifest and sample sheet, create new names \n",
-    "- Rename downloaded files and put them in new folders for each analysis\n"
+    "### Rename file names with symlinks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import yaml\n",
+    "from datetime import datetime\n",
     "\n",
     "with open('data/config.yaml', 'r') as streamfile:\n",
     "    config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
@@ -327,53 +333,36 @@
     "\n",
     "### work with already existing merged files in folder 'manifests_merged_sample_sheet'\n",
     "downloaded_manifests = config_file['manifest_for_download']\n",
-    "downloaded_manifests = pd.concat([pd.read_table(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+i) for i in downloaded_manifests])\n",
-    "downloaded_manifests = downloaded_manifests.rename(columns={'id':'File ID', 'filename':'File Name'})\n",
-    "\n",
-    "# original (prior) sample sheets, merge them\n",
-    "sample_sheets = [pd.read_table(analysis_path+'sample_sheets/sample_sheets_prior/'+i) for i in config_file['sample_sheets_prior']]\n",
-    "sample_sheets_merge = pd.concat(sample_sheets)\n",
-    "\n",
-    "sample_sheets_merge['Case ID'] = sample_sheets_merge['Case ID'].str.split(', ', expand=True)[0]\n",
-    "\n",
-    "# categorize samples for their analysis method\n",
-    "method_dict = config_file['methods_dict']\n",
-    "\n",
-    "sample_sheets_merge['Folder'] = ''\n",
-    "\n",
-    "for met in method_dict.keys():\n",
-    "    sample_sheets_merge.loc[sample_sheets_merge['File Name'].str.contains(met), 'Folder'] = method_dict[met]\n",
-    "\n",
-    "# 36 characters file ID\n",
-    "sample_sheets_merge['File Suffix'] = sample_sheets_merge['File Name'].str[36:]\n",
-    "\n",
-    "sample_sheets_merge['Path_raw'] = analysis_path+'00_raw_data/'+sample_sheets_merge['File ID']+'/'+sample_sheets_merge['File Name']\n",
-    "sample_sheets_merge['Path_sample'] = analysis_path+'01_sample_data/'+sample_sheets_merge['Folder']+'/'+sample_sheets_merge['Case ID']+sample_sheets_merge['File Suffix']\n",
-    "\n",
-    "# merge with executed manifest file(s) on executed manifest files\n",
-    "downloaded_manifests = downloaded_manifests.merge(sample_sheets_merge, how='left', on=['File ID', 'File Name'])\n",
+    "downloaded_manifests = pd.concat([pd.read_table(analysis_path+'sample_sheets/manifests_merged_sample_sheet/'+i.rsplit('_ready.',1)[0]+'_merged_sample_sheet.txt') \n",
+    "                                  for i in downloaded_manifests])\n",
     "\n",
     "# create folders for methods\n",
     "methods = list(downloaded_manifests['Folder'].unique())\n",
     "for m in methods:\n",
     "    os.makedirs(analysis_path+'01_sample_data/'+m, exist_ok=True)\n",
     "\n",
-    "# create symlinks for samples to categorize them in \n",
+    "# create symlinks for samples to sort them into method folders\n",
+    "list_rename_successful = []\n",
     "for raw_path, sample_path in zip(list(downloaded_manifests['Path_raw']), list(downloaded_manifests['Path_sample'])):\n",
     "    try:\n",
     "        os.symlink(raw_path, sample_path)\n",
+    "        list_rename_successful.append('Success')\n",
     "    except FileExistsError:\n",
-    "        print(sample_path.split('/')[-1] + ' already exists.')\n",
+    "        list_rename_successful.append('Already exists')\n",
     "    except FileNotFoundError:\n",
-    "        print(sample_path.split('/')[-1] + ' not found.')\n"
+    "        list_rename_successful.append('Not found')\n",
+    "\n",
+    "downloaded_manifests['rename_success'] = list_rename_successful\n",
+    "\n",
+    "downloaded_manifests[['Path_raw','Path_sample','rename_success']].to_csv((analysis_path+'01_sample_data/'+datetime.now().strftime('%Y-%m-%d_%H-%M-%S')+'_rename_files.txt'), \n",
+    "                                                                         sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyze files\n",
-    "- with Snakemake pipeline\n"
+    "### Analyze files with Snakemake pipeline"
    ]
   },
   {
@@ -384,7 +373,6 @@
    "source": [
     "import subprocess\n",
     "import yaml\n",
-    "import shlex\n",
     "\n",
     "with open('data/config.yaml', 'r') as streamfile:\n",
     "    config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
@@ -393,7 +381,7 @@
     "snakemake_threads = config_file['snakemake_threads']\n",
     "\n",
     "# run Snakemake pipeline\n",
-    "command_snakemake = f'conda run -n {conda_snakemake} snakemake --codes {snakemake_threads} --use-conda'\n",
+    "command_snakemake = f'conda run -n {conda_snakemake} snakemake --cores {snakemake_threads} --use-conda -k'\n",
     "process_snakemake = subprocess.Popen(command_snakemake, shell=True)\n",
     "process_snakemake.wait()\n"
    ]
