Exceptions_rename_files

--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -141,7 +141,13 @@
     "        df.loc[df['File Name'].str.contains(met), 'Folder'] = method_dict[met]\n",
     "    \n",
     "    # 36 characters file ID\n",
-    "    df['File Suffix'] = df['File Name'].str[36:]\n",
+    "    df['File Suffix'] = ''\n",
+    "    df.loc[(df['File Name'].str.startswith('TCGA_LUAD'))|(['File Name'].str.startswith('TCGA-LUAD')), 'File Suffix'] = df['File Name'].str[46:]\n",
+    "    df.loc[df['File Name'].str[36]=='.', 'File Suffix'] = df['File Name'].str[36:]\n",
+    "    df.loc[(df['File Name'].str[36]=='_')&(df['File Name'].str.endswith('.bam')), 'File Suffix'] = '.' + df['File Name'].str[37:]\n",
+    "    df.loc[df['File Name'].str.endswith('.idat'), 'File Suffix'] = '.' + df['File Name'].str[37:]\n",
+    "    df.loc[df['File Suffix']=='', 'File Suffix'] = '.' + df['File Name']\n",
+    "\n",
     "    df['Path_raw'] = analysis_path+'00_raw_data/'+df['File ID']+'/'+df['File Name']\n",
     "    df['Path_sample'] = analysis_path+'01_sample_data/'+df['Folder']+'/'+df['Case ID']+df['File Suffix']\n",
     "\n",
