--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# Input your analysis folder (e.g. analysis_path = '/home/user/user_name1/TCGA_analysis')\n",
-    "analysis_path = '/home/alex/Dokumente/02_OLCIR/00_tcga_download_helper/07_improved_TCGA_download_helper_v1_data'\n",
+    "analysis_path = ''\n",
     "\n",
     "import os\n",
     "if not os.path.exists(analysis_path):\n",
