--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -106,7 +106,8 @@
     "- The script creates a new conda environment called \"gdc_client\" and downloads the gdc-client tool. If you have already installed the gdc-client in a separete conda environment, you can specify that in the configuration file.\n",
     "- The script downloads the TCGA data from manifest(s) specified in previous steps and/or the configuration file via the gdc-client.\n",
     "- The files from the manifest are downloaded into the following folder: \\<your analysis_path\\> + '00_raw_data'\n",
-    "- Download TCGA data via the gdc-client tool."
+    "- Download TCGA data via the gdc-client tool.\n",
+    "- If errors occured during the download (e.g. server connection errors), please execute the previous step (2. Combine manifest with sample sheet) as well."
    ]
   },
   {
