--- a/TCGA_steps_code.ipynb
+++ b/TCGA_steps_code.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,6 @@
    "metadata": {},
    "source": [
     "### 3. Download TCGA data via a manifest document and the GDC-client tool\n",
-    "- The script creates a new conda environment called \"gdc_client\" and downloads the gdc-client tool. If you have already installed the gdc-client in a separete conda environment, you can specify that in the configuration file.\n",
     "- The script downloads the TCGA data from manifest(s) specified in previous steps and/or the configuration file via the gdc-client.\n",
     "- The files from the manifest are downloaded into the following folder: \\<your analysis_path\\> + '00_raw_data'\n",
     "- Download TCGA data via the gdc-client tool.\n",
@@ -172,25 +171,28 @@
     "with open(input_config, 'r') as streamfile:\n",
     "    config_file = yaml.load(streamfile, Loader=yaml.FullLoader)\n",
     "\n",
-    "conda_snakemake = config_file['conda_snakemake']\n",
+    "do_snakemake_sample_analysis = config_file['snakemake_sample_analysis']\n",
     "snakemake_threads = config_file['snakemake_threads']\n",
     "snakemake_methods = config_file['snakemake_methods']\n",
     "\n",
-    "os.makedirs(analysis_path+'02_results_raw', exist_ok=True)\n",
-    "for m in snakemake_methods:\n",
-    "    os.makedirs(analysis_path+'02_results_raw/'+m, exist_ok=True)\n",
-    "os.makedirs(analysis_path+'03_results_combined', exist_ok=True)\n",
+    "# os.makedirs(analysis_path+'02_results_raw', exist_ok=True)\n",
+    "# for m in snakemake_methods:\n",
+    "#     os.makedirs(analysis_path+'02_results_raw/'+m, exist_ok=True)\n",
+    "# os.makedirs(analysis_path+'03_results_combined', exist_ok=True)\n",
     "\n",
-    "# run Snakemake pipeline\n",
-    "command_snakemake = f'conda run -n {conda_snakemake} snakemake --cores {snakemake_threads} --use-conda -k'\n",
-    "process_snakemake = subprocess.Popen(command_snakemake, shell=True)\n",
-    "process_snakemake.wait()"
+    "if do_snakemake_sample_analysis == True:\n",
+    "    # run Snakemake pipeline\n",
+    "    command_snakemake = f'snakemake -s Snakefile_sample_analysis --cores {snakemake_threads} -k'\n",
+    "    process_snakemake = subprocess.Popen(command_snakemake, shell=True)\n",
+    "    process_snakemake.wait()\n",
+    "else:\n",
+    "    print('If you really want to execute the specific sample analysis Snakemake pipeline, please adapt the Snakefile_sample_analysis and adapt the data/config.yaml file.')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Plots",
+   "display_name": "Snake_Test3",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
